@@ -1,5 +1,7 @@
 #VERSION 0.8.6#
 
+ - added class Peak_Model_Zendatable
+
  - fixed _filter_float() constant name error in Peak_Filters_Advanced
 
  - added filter text to Peak_Filters_Advanced
